compiler/testData/diagnostics/tests/dataClasses/dataClassNoName.fir.kt
// See EA-73584
<!PRIMARY_CONSTRUCTOR_REQUIRED_FOR_DATA_CLASS!>data class<!SYNTAX!><!> {

}<!>

// See KT-9296
data interface<!SYNTAX!><!> {

}
